Fix confirmEnableAutoPay modal. Set overflow to auto and fix margin around <hr>

--- a/app/styles/pages/_settings.scss
+++ b/app/styles/pages/_settings.scss
@@ -11,10 +11,11 @@
 .legal-textarea {
 //  padding: 10px 10px 10px 10px;
   margin-top: 10px;
-  margin-bottom: 40px;
+//  margin-bottom: 40px;
 //  width: 100%;
   height: 400px;
 //  background-color: $white;
+  overflow: auto;
 }
 
 #AccountManagementPage, #AuctionSettingsPage {
